testing/errors/valuenotdefined5.a
Zaphod
	*=Zaphod	; -> "Symbol not defined." -> "Value not defined."
